--- a/practica1/makefile
+++ b/practica1/makefile
@@ -2,7 +2,11 @@ STD = -std=c++20
 SRC = src
 BIN = bin
 
-all:
+$(BIN)/aparcamiento_exe:
 	g++ -o $(BIN)/aparcamiento_exe $(SRC)/aparcamiento.cpp $(STD)
+
+$(BIN)/radares_exe:
 	g++ -o $(BIN)/radares_exe $(SRC)/radares.cpp $(STD)
+
+$(BIN)/simulacion_lago2especiespeces_exe:
 	g++ -o $(BIN)/simulacion_lago2especiespeces_exe $(SRC)/simulacion_lago2especiespeces.cpp $(STD)
