Generadores congruenciales lineales casero

--- a/practica2/makefile
+++ b/practica2/makefile
@@ -2,7 +2,7 @@ STD = -std=c++20
 SRC = src
 BIN = bin
 INC = include
-flags = -std=c++20 -Wall -O3 -I/usr/include -I$(INC)
+flags = -std=c++20 -Wall -g -I/usr/include -I$(INC)
 
 all:	$(BIN)/quiosco_exe $(BIN)/gen_congr_exe
 
