--- a/practica2/memoria/makefile
+++ b/practica2/memoria/makefile
@@ -1,4 +1,5 @@
 all:
-	xelatex demo.tex
-	xelatex demo.tex
+	xelatex -shell-escape demo.tex
+	xelatex -shell-escape demo.tex
+	rm -rf _minted-demo
 	rm *.aux *.toc *.log *.out
