--- a/practica3/makefile
+++ b/practica3/makefile
@@ -9,7 +9,7 @@ all: apartado1 apartado2
 
 apartado1: $(BIN)/sistema_tiempo_fijo_exe $(BIN)/sistema_tiempo_variable_exe $(BIN)/sistema_teorico_exe
 
-apartado2: $(BIN)/reparadores_exe $(BIN)/separa_datos_exe
+apartado2: $(BIN)/reparadores_exe $(BIN)/separa_datos_exe $(BIN)/reparadores_BL_exe
 
 apartado3: $(BIN)/puerto_exe
 
@@ -29,6 +29,9 @@ $(BIN)/sistema_teorico_exe: $(SRC)/sistema_teorico.cpp
 	$(GXX) $@ $^ $(FLAGS)
 
 $(BIN)/separa_datos_exe: $(SRC)/separa_datos.cpp
+	$(GXX) $@ $^ $(FLAGS)
+
+$(BIN)/reparadores_BL_exe: $(SRC)/reparadores_BL.cpp $(INC)/reparadores_BL.h
 	$(GXX) $@ $^ $(FLAGS)
 
 clean:
