--- a/practica3/makefile
+++ b/practica3/makefile
@@ -2,10 +2,11 @@ STD = -std=c++20
 SRC = src
 BIN = bin
 INC = include
-FLAGS = -std=c++20 -Wall -I/usr/include -I$(INC) -O3
+FLAGS = -std=c++17 -Wall -I/usr/include -I$(INC) -O3
+FLAGS-no = -std=c++17 -Wall -I/usr/include -I$(INC)
 GXX = g++ -o
 
-all: apartado1 apartado2 apartado3
+all: apartado1 apartado2
 
 apartado1: $(BIN)/sistema_tiempo_fijo_exe $(BIN)/sistema_tiempo_variable_exe $(BIN)/sistema_teorico_exe
 
@@ -13,13 +14,13 @@ apartado2: $(BIN)/reparadores_exe $(BIN)/separa_datos_exe $(BIN)/reparadores_BL_
 
 ###############################################################################
 $(BIN)/sistema_tiempo_fijo_exe: $(SRC)/sistema_tiempo_fijo.cpp
-	$(GXX) $@ $^ $(FLAGS)
+	$(GXX) $@ $^ $(FLAGS-no)
 
 $(BIN)/sistema_tiempo_variable_exe: $(SRC)/sistema_tiempo_variable.cpp
-	$(GXX) $@ $^ $(FLAGS)
+	$(GXX) $@ $^ $(FLAGS-no)
 
 $(BIN)/sistema_teorico_exe: $(SRC)/sistema_teorico.cpp
-	$(GXX) $@ $^ $(FLAGS)
+	$(GXX) $@ $^ $(FLAGS-no)
 ###############################################################################
 ###############################################################################
 $(BIN)/reparadores_exe: $(SRC)/reparadores.cpp $(INC)/reparadores.h
