--- a/practica4/makefile
+++ b/practica4/makefile
@@ -2,7 +2,7 @@ SRC = src
 BIN = bin
 INCLUDE = include
 GXX = g++
-FLAGS = -I/usr/include -I$(INCLUDE) -Wall -std=c++17 -g
+FLAGS = -I/usr/include -I$(INCLUDE) -Wall -std=c++17 -O3
 
 $(BIN)/simulacion_enfermedad_exe: $(SRC)/simulacion_enfermedad.cpp $(SRC)/simulacion.cpp $(INCLUDE)/simulacion.h
 	$(GXX) -o $@ $^ $(FLAGS)
