--- a/practica4/memoria/makefile
+++ b/practica4/memoria/makefile
@@ -1,5 +1,5 @@
 all:
-	xelatex -shell-escape demo.tex
-	xelatex -shell-escape demo.tex
+	pdflatex -shell-escape memoria.tex
+	pdflatex -shell-escape memoria.tex
 	rm -rf _minted-demo
 	rm *.aux *.toc *.log *.out
